feat: Nove e foto da Ielifer

--- a/index.html
+++ b/index.html
@@ -422,16 +422,16 @@
                             data-speaker-name="Ielifer Marques"
                             data-speaker-role="Coordenadora de consultoria"
                             data-speaker-bio="Iélifer Marques é Engenheira de Produção formada pela UFMS e atua como Coordenadora de Consultoria na P-Excellence, onde lidera projetos de BPM (Business Process Management) e melhoria contínua para organizações de diferentes segmentos. Tem experiência prática em otimização, mapeamento e padronização de processos em empresas de pequeno a grande porte, com estruturas que variam de 7 a 35 mil colaboradores, sempre com foco em eficiência operacional e geração de valor sustentável."
-                            data-speaker-img="assent/palestras5.png"
+                            data-speaker-img="assent/palestras6.png"
                             data-linkedin="https://www.linkedin.com/in/i%C3%A9lifer-marques-347a111b5/"
                             aria-label="Abrir detalhes do palestrante Ielifer Marques">
 
                             <div class="speaker-image-container">
-                                <img src="assent/palestras5.png" alt="Foto do palestrante Ielifer Marques" loading="lazy" decoding="async">
+                                <img src="assent/palestras6.png" alt="Foto do palestrante Ielifer Marques" loading="lazy" decoding="async">
                             </div>
 
                             <div class="speaker-info">
-                                <h3>Ielifer Marques — Coordenadora de consultoria</h3>
+                                <h3>Ielifer Marques — Coord. de consultoria</h3>
                                 <p><strong>Tema:</strong> Gestão de Processos</p>
                             </div>
                         </button>
