feat nova atualização

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <img src="assent/logo-1.svg" alt="Acelera Mato Grosso" class="hero-logo" width="580" height="160" decoding="async">
                     <h1 id="hero-title">Evento de inovação, negócios e networking em Sinop-MT</h1>
                     <p>Um dia de conteúdo prático e conexões estratégicas para acelerar empresas, projetos e carreiras em Mato Grosso.</p>
-                    <span class="vagas-alerta">Vagas limitadas para manter a experiência de alto nível</span>
+                    <span class="vagas-alerta">Vagas limitadas para manter a experiência em alto nível</span>
                     <a href="#ingressos" class="btn-hero">Garantir minha vaga</a>
                 </div>
                 <div class="hero-image" aria-hidden="true">
@@ -195,7 +195,7 @@
 
                 <div class="about-text">
                     <h2 id="sobre-title">O que é o Acelera Mato Grosso?</h2>
-                    <p>O Acelera Mato Grosso é um evento criado para fortalecer o ecossistema local, reunindo pessoas e organizações para falar de crescimento, inovação e execução. Aqui o foco é sair do "conceito" e levar você para a prática: estratégias, ferramentas e trocas reais com quem faz acontecer em Sinop e em todo o MT.</p>
+                    <p>O Acelera Mato Grosso é um evento criado para fortalecer o ecossistema local, reunindo pessoas e organizações para falar de crescimento, inovação e execução. Aqui o foco é sair do "conceito" e levar você para a prática: estratégias, ferramentas e trocas reais com quem faz acontecer em Sinop e em todo o Mato Grosso.</p>
                 </div>
 
             </div>
@@ -314,7 +314,7 @@
         <section class="speakers-section" id="palestrantes" aria-labelledby="palestrantes-title">
             <div class="speakers-container">
                 <h2 class="speakers-title" id="palestrantes-title">Palestrantes e convidados</h2>
-                <p class="speakers-subtitle">Reunimos profissionais com experiência prática em crescimento e inovação, conectando o mercado local com referências e cases aplicáveis.</p>
+                <p class="speakers-subtitle">Reunimos profissionais renomados com vasta experiência em suas respectivas áreas de atuação, para trazer clareza e conteúdo prático para todas as realidades, trazendo para Sinop-MT o que existe de melhor no mercado nacional e internacional.</p>
         
                 <div class="speakers-carousel" aria-label="Lista de palestrantes" tabindex="0">
                     <div class="speakers-track" id="speakers-track">
@@ -333,7 +333,7 @@
                             </div>
 
                             <div class="speaker-info">
-                                <h3>Leonardo Naranjo — Sócio Empresário</h3>
+                                <h3>Leonardo Naranjo — Empresário</h3>
                                 <p><strong>Tema:</strong> Gestão de Risco.</p>
                             </div>
                         </button>
@@ -342,7 +342,7 @@
                         <button type="button" class="speaker-card speaker-card-btn"
                             data-speaker-name="Filipe Telles"
                             data-speaker-role="Gestor de Liderança e Inovação"
-                            data-speaker-bio="Filipe Telles é gestor de Inovação e Qualidade na Agroceres PIC e mentor de negócios no PwC Agtech Innovation. Atua fortalecendo pessoas e times por meio de treinamentos, workshops, consultorias e mentorias que combinam metodologias modernas de gestão (como Gestão 3.0, Design Thinking e Agile) com desenvolvimento humano, liderança, comunicação, inteligência emocional, planejamento estratégico e gestão da inovação. Com trajetória sólida em gestão de projetos, processos e desenvolvimento de talentos, também traz uma abordagem prática inspirada no aprendizado com cavalos, ajudando líderes a aplicarem presença, exemplo e interesse genuíno para lidar com desafios reais. É mestre pela UNESP e possui MBA em Gestão de Projetos pela USP/ESALQ."
+                            data-speaker-bio="Filipe Telles é consultor em gestão estratégica, de pessoas e de inovação, palestrante e empreendedor, com atuação no desenvolvimento de líderes e empresários em ambientes de alta complexidade e transformação. Trabalha ajudando médias e grandes empresas a estruturarem gestão, cultura e tomada de decisão em um cenário marcado por incertezas, inovação e mudança constante. Com experiência prática em projetos de gestão, estratégia e soft skills em grandes empresas, conecta liderança, propósito e performance para gerar resultados sustentáveis nas realidades mais desafiadoras."
                             data-speaker-img="assent/palestras2.png"
                             data-linkedin="https://www.linkedin.com/in/filipetelles/"
                             aria-label="Abrir detalhes do palestrante Filipe Telles">
@@ -352,7 +352,7 @@
                             </div>
 
                             <div class="speaker-info">
-                                <h3>Filipe Telles — Liderança e Inovação</h3>
+                                <h3>Filipe Telles — Empresário</h3>
                                 <p><strong>Tema:</strong> Liderança</p>
                             </div>
                         </button>
@@ -391,7 +391,7 @@
                             </div>
 
                             <div class="speaker-info">
-                                <h3>Mariana Maduro — Diretora Jurídicar</h3>
+                                <h3>Mariana Maduro — Empresária</h3>
                                 <p><strong>Tema:</strong> Direito Societário</p>
                             </div>
                         </button>
@@ -411,7 +411,7 @@
                             </div>
 
                             <div class="speaker-info">
-                                <h3>Rafael Periole — Sócio Empresário</h3>
+                                <h3>Rafael Periole — Empresário</h3>
                                 <p><strong>Tema:</strong> Era da Venda</p>
                             </div>
                         </button>
@@ -430,7 +430,7 @@
                             </div>
 
                             <div class="speaker-info">
-                                <h3>Ielifer Marques — Coord. de consultoria</h3>
+                                <h3>Ielifer Marques — Consultora</h3>
                                 <p><strong>Tema:</strong> Gestão de Processos</p>
                             </div>
                         </button>
@@ -455,7 +455,7 @@
                     <h3 class="ticket-name">Acelera Standard</h3>
 
                     <div class="price-container">
-                        <span class="old-price">R$ 1.994,00</span>
+                        <span class="old-price">R$ 987,00</span>
 
                         <div class="main-price" aria-label="Preço parcelado">
                             <span class="price-x">R$ x3</span>
@@ -476,7 +476,7 @@
                             <li><strong>Kit Acelera Mato Grosso 2026:</strong> com materiais exclusivos para que você consiga extrair o máximo da experiência no Acelera.</li>
                             <li><strong>Acesso Presencial ao evento:</strong> cara a cara com quem está fazendo acontecer e transformando o mercado, impulsionando empresas ao sucesso!</li>
                             <li><strong>Crie conexões:</strong> Coffee Break, com os participantes do evento e convidados, muito networking, com empresários e investidores.</li>
-                            <li><strong>Acesso ao Hotseat:</strong> Tenha a melhor experiência Acelera Sinop, o momento mais aguardado do evento, onde ideias são geradas, soluções, oportunidades, troca de experiência e muito mais!</li>
+                            <li><strong>Acesso ao Hotseat:</strong> Tenha a melhor experiência Acelera Mato Grosso, o momento mais aguardado do evento, onde ideias são geradas, soluções, oportunidades, troca de experiência e muito mais!</li>
                         </ul>
                     </div>
 
@@ -486,7 +486,7 @@
                     <h3 class="ticket-name vip-label">Acelera VIP</h3>
 
                     <div class="price-container">
-                        <span class="old-price">R$ 4.044,00</span>
+                        <span class="old-price">R$ 2497,80</span>
                         
                         <div class="main-price" aria-label="Preço parcelado">
                             <span class="price-x">R$ x3</span>
@@ -506,9 +506,9 @@
                         <ul>
                             <li><strong>Kit Acelera Mato Grosso 2026:</strong> com materiais exclusivos para que você consiga extrair o máximo da experiência no Acelera.</li>
                             <li><strong>Acesso Presencial ao evento:</strong> cara a cara com quem está fazendo acontecer e transformando o mercado, impulsionando empresas ao sucesso!</li>
-                            <li><strong>Crie conexões valiosas:</strong> acesso ao Coffee Break VIP, com Kleber Santos, Gabriel Pereira e Evelyn Cavenaghi, Grandes Palestrantes e Convidados Especiais.</li>
-                            <li><strong>Acesso ao Hotseat:</strong> Tenha a melhor experiência Acelera Sinop, o momento mais aguardado do evento, onde ideias são geradas, soluções, oportunidades, troca de experiência e muito mais!</li>
-                            <li><strong>Jantar Vip:</strong> acesso ao nosso jantar Vip, Criando conexões valiosas direitas com nossos Palestrantes e Membros do grupo Acelera Sinop, Buffet da mais alta gastronomia e música Ao Vivo, para a melhor experiência!</li>
+                            <li><strong>Crie conexões valiosas:</strong> acesso ao Coffee Break VIP, com  Grandes Palestrantes e Convidados Especiais.</li>
+                            <li><strong>Acesso ao Hotseat:</strong> Tenha a melhor experiência Acelera Mato Grosso, o momento mais aguardado do evento, onde ideias são geradas, soluções, oportunidades, troca de experiência e muito mais!</li>
+                            <li><strong>Jantar Vip:</strong> acesso ao nosso jantar Vip, Criando conexões valiosas direitas com nossos Palestrantes e Membros do grupo Acelera Mato Grosso, Buffet da mais alta gastronomia e música Ao Vivo, para a melhor experiência!</li>
                         </ul>
                     </div>
 
