--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <meta name="twitter:description" content="Evento presencial de inovação, negócios e networking em Sinop-MT.">
     <meta name="twitter:image" content="https://www.seudominio.com/assent/og.jpg">
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-568GHW2S');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBX2GLL9GS"></script>
     <script>
@@ -91,6 +99,13 @@
     </script>
 </head>
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-568GHW2S" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!------- MENU CABEÇALHO ------>
     <a class="skip-link" href="#conteudo">Pular para o conteúdo</a>
 
