--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <a href="#ingressos" class="btn-hero">Garantir minha vaga</a>
                 </div>
                 <div class="hero-image" aria-hidden="true">
-                    <img src="assent/art-1.png" alt="Palestrantes do Evento" fetchpriority="high" decoding="async">
+                    <img src="assent/art-1.jpeg" alt="Palestrantes do Evento" fetchpriority="high" decoding="async">
                 </div>
             </div>
         </section>
